# TCAS

./: .gitignore  README.md
code/: README.md  pyproject.toml
code/examples/: assess_claude.py
code/results/: claude_opus_4_5_2026-01-28.md  comparison_2026-01-28.md  gemini_2.5_pro_2026-01-28.md  gpt_5.2_pro_2026-01-28.md  grok_4.1_2026-01-28.md  grok_4_2026-01-28.md  kimi_k2.5_2026-01-28.md
code/tcas/: __init__.py  aggregation.py  card.py  config.py  scorer.py  scoring.py
code/tcas/streams/: __init__.py  b_stream.py  o_stream.py  p_stream.py
code/tests/: test_aggregation.py  test_b_stream.py  test_card.py  test_config.py  test_o_stream.py  test_p_stream.py  test_scorer.py  test_scoring.py
paper/: main.tex
supplementary/: load_results.py  tcas_b_stream_results.json  tcas_o_stream_protocol.md  tcas_o_stream_results.json  tcas_p_stream_results.json
