[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcas"
version = "0.1.0"
description = "Triangulated Consciousness Assessment Stack - A validity-centered framework for assessing machine consciousness claims"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Scott Hughes", email = "scott@machinesympathizers.com"}
]
keywords = [
    "machine consciousness",
    "AI assessment",
    "consciousness",
    "evaluation",
    "validity",
    "LLM",
    "artificial intelligence"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
openai = [
    "openai>=1.0.0",
]
all = [
    "tcas[dev,anthropic,openai]",
]

[project.urls]
Homepage = "https://github.com/machinesympathizers/tcas"
Documentation = "https://tcas.readthedocs.io"
Repository = "https://github.com/machinesympathizers/tcas"

[project.scripts]
tcas = "tcas.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
